--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ alembic==1.12.0
 bcrypt==4.0.1
 blinker==1.6.3
 click==8.1.7
-Flask==3.0.0
+Flask==2.3.2
 Flask-Bcrypt==1.0.1
 Flask-DebugToolbar==0.13.1
 Flask-Login==0.6.2
@@ -14,8 +14,9 @@ Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.3
 mysql==0.0.3
+mysql-connector==2.2.9
 mysqlclient==2.2.0
 python-dotenv==1.0.0
 SQLAlchemy==2.0.22
 typing_extensions==4.8.0
-Werkzeug==3.0.1
+Werkzeug==2.3.3
