--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Flask-DebugToolbar==0.14.1
 Flask-Login==0.6.3
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
 greenlet==3.0.3
 itsdangerous==2.1.2
 Jinja2==3.1.3
@@ -24,3 +25,5 @@ SQLAlchemy==2.0.25
 SQLAlchemy-Utils==0.41.1
 typing_extensions==4.9.0
 Werkzeug==3.0.1
+WTForms==3.1.2
+WTForms-SQLAlchemy==0.4.1
