--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
 alembic==1.13.1
+annotated-types==0.6.0
+anyio==3.7.1
+async-generator==1.10
+attrs==23.2.0
 bcrypt==4.1.2
 blinker==1.7.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
+fastapi==0.110.0
+fastapi-login==1.10.0
 Flask==3.0.1
 Flask-Bcrypt==1.0.1
 Flask-DebugToolbar==0.14.1
@@ -10,6 +18,14 @@ Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 greenlet==3.0.3
+gunicorn==21.2.0
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httptools==0.6.1
+Hypercorn==0.16.0
+hyperframe==6.0.1
+idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.3
 Mako==1.3.0
@@ -17,13 +33,30 @@ Markdown==3.5.2
 MarkupSafe==2.1.4
 mysqlclient==2.2.1
 nh3==0.2.15
+outcome==1.3.0.post0
 packaging==23.2
 pipdeptree==2.13.2
+priority==2.0.0
 protobuf==4.25.2
+pydantic==2.6.4
+pydantic_core==2.16.3
+PyJWT==2.8.0
 python-dotenv==1.0.0
+PyYAML==6.0.1
+requests==2.31.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
 SQLAlchemy==2.0.25
 SQLAlchemy-Utils==0.41.1
+starlette==0.36.3
+trio==0.21.0
 typing_extensions==4.9.0
+urllib3==2.2.1
+uvicorn==0.28.0
+uvloop==0.19.0
+watchfiles==0.21.0
+websockets==12.0
 Werkzeug==3.0.1
+wsproto==1.2.0
 WTForms==3.1.2
 WTForms-SQLAlchemy==0.4.1
