--- a/requirements.txt
+++ b/requirements.txt
@@ -2,18 +2,21 @@ alembic==1.13.1
 annotated-types==0.6.0
 anyio==3.7.1
 async-generator==1.10
+asyncmy==0.2.9
 attrs==23.2.0
 bcrypt==4.1.2
 blinker==1.7.0
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
+cryptography==42.0.5
+ecdsa==0.18.0
 fastapi==0.110.0
-fastapi-login==1.10.0
 Flask==3.0.1
 Flask-Bcrypt==1.0.1
 Flask-DebugToolbar==0.14.1
-Flask-Login==0.6.3
+Flask-JWT-Extended==4.6.0
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
@@ -38,12 +41,18 @@ packaging==23.2
 pipdeptree==2.13.2
 priority==2.0.0
 protobuf==4.25.2
+pyasn1==0.5.1
+pycparser==2.21
 pydantic==2.6.4
+pydantic-settings==2.2.1
 pydantic_core==2.16.3
 PyJWT==2.8.0
 python-dotenv==1.0.0
+python-jose==3.3.0
 PyYAML==6.0.1
 requests==2.31.0
+rsa==4.9
+six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 SQLAlchemy==2.0.25
